--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mini Forum</title>
+  <title>Mini Forum</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Mini Forum</h1>
