--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mini Forum</title>
+  <title>Swag Forum</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
-    <h1>Mini Forum</h1>
+<header>
+  🚀 WELCOME TO THE ULTIMATE FORUM 🔥💯💀
+</header>
+<marquee direction="left" scrollamount="10" behavior="alternate">
+  MLG FORUM INCOMING 💯💥🔥
+</marquee>
     <form action="/post" method="post">
         <input type="text" name="title" placeholder="Title" required><br>
         <textarea name="body" placeholder="Body" required></textarea><br>
